AM_CPPFLAGS = -g -Wall @CXXFLAGS_EXTRA@

AM_LDFLAGS =  -g -Wall @LDFLAGS_EXTRA@

LIBS = @LDFLAGS_EXTRA@

bin_PROGRAMS = RNABranchIDViz

RNABranchIDViz_SOURCES = \
      BranchTypeIdentification.cpp \
      DiagramImage.cpp \
      Main.cpp \
      RNAStructure.cpp \
      RuntimeConfig.cpp \
      Utils.cpp
